@@ -8,11 +8,14 @@
 <%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
 <%@ taglib uri="http://struts.apache.org/tags-logic" prefix="logic" %>
 <%@ taglib uri="http://struts.apache.org/tags-nested" prefix="nested" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
 <%@page import="java.util.Enumeration"%>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<%@page import="edu.sdsc.nbcr.opal.gui.common.AppMetadata"%>
+<%@page import="org.apache.struts.upload.FormFile"%>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Submission form for <bean:write name="appMetadata" property="serviceName" /></title>
@@ -25,6 +28,10 @@
 <!--
 
 var state = 'none';
+
+function makeTrue(){
+
+}
 
 function showHide(layer_ref) {
     if (state == 'block') {
@@ -62,16 +69,36 @@ function showHide(layer_ref) {
     
 
     
-    <!-- dynamic part for the file upload TODO make the number of file selectable by user -->
-    <tr><td>Chose input file:</td><td><nested:file property="file" size="40"/></td>
+<% 
+
+AppMetadata app = (AppMetadata) request.getSession().getAttribute("appMetadata");
+FormFile [] files = app.getFiles();
+
+if ( files.length > 1 ) {
+    //let's print the name of the file already uploaded
+    for (int i = 0; i < files.length - 1; i++ ){
+        
+        String name = null;
+        if ( files[i] != null ) {
+            name = files[i].getFileName();
+        }else name = "null file at " + i;
+        
+        out.println("<tr><td colspan=\"2\"> Uploaded file: " + name + "</td></tr>");
+    }
+}
+
+String index = "" + (files.length - 1);
+%>
+    <tr><td>Chose input file:</td><td><nested:file property="<%= "files[" + index + "]" %>" size="40"/></td>
     
     <!-- end file upload part -->
 
     
     
-    
+    <html:hidden property="addFile" value="false" />
     <!-- submit and reset button  -->
-    <tr> <td colspan="2" align="left"> <html:submit value="Submit"/> <html:reset value="Reset"/> </td> </tr>
+    <tr> <td colspan="2" align="left"> <html:submit value="Submit"/> <html:reset value="Reset"/> 
+    <input type="button" onclick="document.appMetadata.addFile.value='true'; document.appMetadata.submit()" value="Add Another File"/> </td> </tr>
 </table>
 </html:form>
 <span style="text-decoration: underline; " onclick="showHide('help')">Show/Hide help</span>
@@ -82,7 +109,7 @@ function showHide(layer_ref) {
     <logic:notEmpty name="appMetadata" property="info">
     <p class="manual" >Usage Info:</br>
         <logic:iterate id="infoString" name="appMetadata" property="info"> 
-            <pre> <%= infoString %></pre> 
+            <pre> <c:out value="<%= infoString %>"> </c:out> </pre> 
         </logic:iterate>
     </p>
     </logic:notEmpty>
